--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>María Laura Peralta — Ciencia de Datos, IA y Desarrollo Web</title>
+  <title>Ciencia de Datos, IA y Desarrollo Web</title>
 
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,14 +12,13 @@
 
   <style>
     :root {
-      --bg: #f3f4f6;         /* más claro */
-      --bg-soft: #e5e7eb;    /* gris claro */
-      --card: #ffffff;       /* blanco */
-      --text: #111827;       /* gris oscuro */
-      --muted: #6b7280;      /* gris medio */
-      --primary: #2563eb;    /* azul */
+      --bg: #f9fafb;         /* más claro */
+      --card: #ffffff;
+      --text: #111827;
+      --muted: #6b7280;
+      --primary: #2563eb;
       --primary-strong: #1d4ed8;
-      --accent: #7c3aed;     /* violeta */
+      --accent: #7c3aed;
       --radius: 16px;
       --maxw: 1080px;
     }
@@ -89,7 +88,13 @@
   <nav class="dots">
     <a class="dot active" href="#inicio"></a>
     <a class="dot" href="#formacion"></a>
+    <a class="dot" href="#habilidades"></a>
     <a class="dot" href="#experiencia"></a>
+    <a class="dot" href="#docencia"></a>
+    <a class="dot" href="#ventas"></a>
+    <a class="dot" href="#otras"></a>
+    <a class="dot" href="#desarrollo"></a>
+    <a class="dot" href="#gestion"></a>
     <a class="dot" href="#contacto"></a>
   </nav>
 
@@ -108,7 +113,7 @@
     </div>
   </section>
 
-  <!-- Formación -->
+  <!-- Formación Académica -->
   <section id="formacion">
     <div class="container card">
       <h2>Formación Académica</h2>
@@ -120,14 +125,88 @@
     </div>
   </section>
 
-  <!-- Experiencia -->
+  <!-- Habilidades Técnicas -->
+  <section id="habilidades">
+    <div class="container card">
+      <h2>Habilidades Técnicas</h2>
+      <ul>
+        <li>Lenguajes: C, C++, Java, JavaScript, Python</li>
+        <li>Bases de datos: SQL</li>
+        <li>Herramientas y plataformas: Moodle, WordPress, XAMPP, Joomla</li>
+        <li>Sistemas Operativos: Windows, Linux, Android</li>
+        <li>Ofimática: Excel, Word, PowerPoint, Access</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Experiencia Profesional Reciente -->
   <section id="experiencia">
     <div class="container card">
-      <h2>Experiencia Profesional</h2>
+      <h2>Experiencia Profesional Reciente</h2>
       <ul>
         <li>Analista Funcional – ITC (2023–Actualidad)</li>
         <li>Analista Funcional, Testing y Soporte en Moodle – UNSJ (2020–Actualidad)</li>
         <li>Auxiliar Docente – Instituto Genios (2014–Actualidad)</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Docencia Universitaria -->
+  <section id="docencia">
+    <div class="container card">
+      <h2>Docencia Universitaria</h2>
+      <ul>
+        <li>Ayudante de Cátedra — Geometría Analítica (FFHA-UNSJ, 2012)</li>
+        <li>Ayudante de Cátedra — Elementos de Álgebra (FFHA-UNSJ, 2013)</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Experiencia en Ventas y Atención -->
+  <section id="ventas">
+    <div class="container card">
+      <h2>Experiencia en Ventas y Atención</h2>
+      <ul>
+        <li>Encargada de sucursal — GRIDO Helados (2018–2019)</li>
+        <li>Vendedora — Call Center Movistar Express (2017–2018)</li>
+        <li>Atención al público en comercios (2007–2017)</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Otras Experiencias -->
+  <section id="otras">
+    <div class="container card">
+      <h2>Otras Experiencias</h2>
+      <ul>
+        <li>Auxiliar de Nivel Inicial — Centro “Mi Jelu” (2016)</li>
+        <li>Ayudante de cocina y eventos (2015–2017)</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Desarrollo y Programación -->
+  <section id="desarrollo">
+    <div class="container card">
+      <h2>Desarrollo y Programación</h2>
+      <ul>
+        <li>Node JS — Codo a Codo (2022)</li>
+        <li>Fundamentos Python — CISCO (2022)</li>
+        <li>Testing QA — Codo a Codo (2022)</li>
+        <li>Backend con JS — San Juan TEC (2021)</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Educación y Gestión -->
+  <section id="gestion">
+    <div class="container card">
+      <h2>Educación y Gestión</h2>
+      <ul>
+        <li>Teletrabajo — CAMEeducativa (2019)</li>
+        <li>Resolución de conflictos (2019)</li>
+        <li>Conformación de Equipos de Trabajo (2018)</li>
+        <li>El Rol del Preceptor — Instituto CRECER (2015)</li>
       </ul>
     </div>
   </section>
@@ -152,4 +231,3 @@
   </script>
 </body>
 </html>
-
