--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     }
 
     #inicio {
-      background: url('fondo.jpg') center/cover no-repeat;
+      background: url('fondo.png') center/cover no-repeat;
       color: white;
     }
 
