--- a/portfolio.html
+++ b/portfolio.html
@@ -51,6 +51,7 @@
     h2 {
       font-size: clamp(22px, 3.5vw, 32px);
       margin: 24px 0 8px;
+      text-align: center;
     }
 
     h3 {
@@ -198,42 +199,42 @@
         <div class="card">
           <h3>Validar Mail</h3>
           <p>Lorem Impus</p>
-          <a class="btn" href="check_mail.html">Ver</a>
+          <a class="btn" href="s_js_check_mail.html">Ver</a>
         </div>
         <div class="card">
           <h3>Clima</h3>
-          <p>Script que muestra el clima.</p>
-          <a class="btn" href="clima.html">Ver</a>
+          <p>Script que muestra el clima (necesita permisos de ubicación).</p>
+          <a class="btn" href="s_js_clima.html">Ver</a>
         </div>
         <div class="card">
           <h3>Cronómetro</h3>
           <p>Script ...</p>
-          <a class="btn" href="cronometro.html">Ver</a>
+          <a class="btn" href="s_js_cronometro.html">Ver</a>
         </div>
         <div class="card">
           <h3>Cronómetro 2</h3>
           <p>Script ..</p>
-          <a class="btn" href="cronometro_marca.html">Ver</a>
+          <a class="btn" href="s_js_cronometro_marca.html">Ver</a>
         </div>
         <div class="card">
           <h3>Firma</h3>
           <p>Script ..</p>
-          <a class="btn" href="firma.html">Ver</a>
+          <a class="btn" href="s_js_firma.html">Ver</a>
         </div>
         <div class="card">
           <h3>Contraseña</h3>
           <p>Script ..</p>
-          <a class="btn" href="pass.html">Ver</a>
+          <a class="btn" href="s_js_pass.html">Ver</a>
         </div>
         <div class="card">
           <h3>Contraseña Automática</h3>
           <p>Script ..</p>
-          <a class="btn" href="password_a.html">Ver</a>
+          <a class="btn" href="s_js_password_a.html">Ver</a>
         </div>
         <div class="card">
           <h3>Temporizador</h3>
           <p>Script ..</p>
-          <a class="btn" href="temporizador.html">Ver</a>
+          <a class="btn" href="s_js_temporizador.html">Ver</a>
         </div>
       </div>
     </div>
@@ -245,22 +246,22 @@
         <div class="card">
           <h3>Ahorcado</h3>
           <p>Juego clásico del ahorcado implementado en JavaScript.</p>
-          <a class="btn" href="ahorcado.html">Ver</a>
+          <a class="btn" href="j_js_ahorcado.html">Ver</a>
         </div>
         <div class="card">
           <h3>Memoria</h3>
           <p>Juego de la memoria desarrollado en JavaScript</p>
-          <a class="btn" href="memoria.html">Ver</a>
+          <a class="btn" href="j_js_memoria.html">Ver</a>
         </div>
         <div class="card">
           <h3>Snake</h3>
           <p>Clásico juego desarrollado en JavaScript.</p>
-          <a class="btn" href="snake.html">Ver</a>
+          <a class="btn" href="j_js_snake.html">Ver</a>
         </div>
         <div class="card">
           <h3>Tetris</h3>
           <p>A disfrutar de esta versión que incluye personalización.</p>
-          <a class="btn" href="tetris.html">Ver</a>
+          <a class="btn" href="j_js_tetris.html">Ver</a>
         </div>
       </div>
     </div>
@@ -270,14 +271,29 @@
     <div class="panel">
       <div class="grid">
         <div class="card">
-          <h3>Analizador de Texto</h3>
-          <p>Cuenta palabras, caracteres y frases de un texto.</p>
-          <a class="btn" href="#">Ver código</a>
+          <h3>Script Ejemplo</h3>
+          <p>Este es un ejemplo para probar el uso de PyScript</p>
+          <a class="btn" href="s_py_probando_PyScript.html">Ver</a>
         </div>
         <div class="card">
-          <h3>Buscador de Archivos</h3>
-          <p>Busca archivos por tipo o nombre en tu PC.</p>
-          <a class="btn" href="#">Ver código</a>
+          <h3>Descargar video de Yotube</h3>
+          <p>Lorem Imput</p>
+          <a class="btn" href="s_py_download_ytvideo.html">Ver</a>
+        </div>
+        <div class="card">
+          <h3>Batalla Naval</h3>
+          <p>Lorem Imput</p>
+          <a class="btn" href="j_py_batalla_naval.html">Ver</a>
+        </div>
+        <div class="card">
+          <h3>Ta Te Ti</h3>
+          <p>Lorem Imput</p>
+          <a class="btn" href="j_py_ta_te_ti.html">Ver</a>
+        </div>
+        <div class="card">
+          <h3>Piedra, Papel o Tijera</h3>
+          <p>Lorem Imput</p>
+          <a class="btn" href="j_py_piedra_papel_tijera.html">Ver</a>
         </div>
       </div>
     </div>
