--- a/portfolio.html
+++ b/portfolio.html
@@ -10,328 +10,232 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
+  <!-- CSS global -->
+  <link rel="stylesheet" href="portfolio.css">
+
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
-  <style>
-    :root {
-      --bg: #f9fafb;
-      --card: #ffffff;
-      --text: #111827;
-      --muted: #6b7280;
-      --primary: #2563eb;
-      --accent: #7c3aed;
-      --radius: 16px;
-      --maxw: 1080px;
-    }
-
-    body {
-      margin: 0;
-      font-family: Inter, sans-serif;
-      color: var(--text);
-      background: var(--bg);
-      scroll-behavior: smooth;
-    }
-
-    section {
-      padding: clamp(48px, 5vw, 96px) 5vw;
-      position: relative;
-    }
-
-    h1, h2, h3 {
-      font-family: Poppins, sans-serif;
-    }
-
-    h1 {
-      font-size: clamp(32px, 6vw, 54px);
-      margin: 0 0 12px;
-      text-align: center;
-    }
-
-    h2 {
-      font-size: clamp(22px, 3.5vw, 32px);
-      margin: 24px 0 8px;
-      text-align: center;
-    }
-
-    h3 {
-      font-size: 20px;
-      margin: 0;
-    }
-
-    .container {
-      max-width: var(--maxw);
-      margin: auto;
-    }
-
-    .header {
-      background: url('portfolio.jpg') center center / cover no-repeat fixed;
-      color: white;
-      text-align: center;
-      padding: 96px 24px;
-      position: relative;
-    }
-
-    .overlay {
-      background: rgba(0,0,0,0.45);
-      position: absolute;
-      inset: 0;
-    }
-
-    .overlay-content {
-      position: relative;
-      z-index: 1;
-    }
-
-    .subtitulo {
-      max-width: 1050px;
-      margin: 0 auto;
-      text-align: center;
-      font-size: clamp(18px, 2.2vw, 22px);
-      line-height: 1.6;
-    }
-
-    .accordion {
-      background: #e5e7eb;
-      border-radius: 12px;
-      margin: 24px 0;
-      padding: 16px;
-      cursor: pointer;
-      transition: background 0.2s ease;
-    }
-
-    .accordion:hover {
-      background: #d1d5db;
-    }
-
-    .panel {
-      display: none;
-      margin-top: 16px;
-      animation: fade 0.3s ease-in-out;
-    }
-
-    .panel .grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 24px;
-      margin-top: 16px;
-    }
-
-    @media (min-width: 768px) {
-      .panel .grid {
-        grid-template-columns: 1fr 1fr;
-      }
-    }
-
-    .card {
-      background: var(--card);
-      border-radius: var(--radius);
-      padding: 24px;
-      box-shadow: 0 6px 20px rgba(0,0,0,.1);
-      transition: transform 0.2s ease;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 12px;
-      padding: 10px 16px;
-      border-radius: 12px;
-      background: var(--primary);
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      transition: opacity 0.2s ease;
-    }
-
-    .btn:hover {
-      opacity: 0.85;
-    }
-
-    .btn.ghost { background: #e5e7eb; color: #111827; }
-
-    @keyframes fade {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    footer {
-      text-align: center;
-      padding: 32px;
-      color: var(--muted);
-    }
-
-    .accordion i {
-      float: right;
-      transition: transform 0.3s;
-    }
-
-    .accordion.active i {
-      transform: rotate(90deg);
-    }
-
-  </style>
 </head>
 <body>
 
-  <header class="header">
-    <div class="overlay"></div>
-    <div class="overlay-content">
-      <h1>Portfolio</h1>
-      <p class="subtitulo">
-        Esta sección reúne una selección de proyectos desarrollados durante mi formación y experiencia práctica. 
-        Incluye scripts funcionales en JavaScript y Python, juegos interactivos, automatizaciones simples y 
-        notebooks de análisis de datos. Cada uno refleja distintas habilidades técnicas aplicadas a la resolución 
-        de problemas concretos, exploración de datos y desarrollo web.
-      </p>
-    </div>
-  </header>
+<!-- Botones de idioma -->
+<div class="lang-switch" aria-label="Language Switcher">
+  <button id="lang-es" type="button">ES</button>
+  <button id="lang-en" type="button">EN</button>
+</div>
 
-  <section class="container">
+<!-- Modo oscuro -->
+<div class="theme-toggle">
+  <button id="darkToggle"><i class="fas fa-moon"></i></button>
+</div>
 
-    <!-- Sección 1 -->
-    <div class="accordion"><h2>Scripts JS <i class="fas fa-chevron-right"></i></h2></div>
-    <div class="panel">
-      <div class="grid">
-        <div class="card">
-          <h3>Validar Mail</h3>
-          <p>Lorem Impus</p>
-          <a class="btn" href="s_js_check_mail.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Clima</h3>
-          <p>Script que muestra el clima (necesita permisos de ubicación).</p>
-          <a class="btn" href="s_js_clima.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Cronómetro</h3>
-          <p>Script ...</p>
-          <a class="btn" href="s_js_cronometro.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Cronómetro 2</h3>
-          <p>Script ..</p>
-          <a class="btn" href="s_js_cronometro_marca.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Firma</h3>
-          <p>Script ..</p>
-          <a class="btn" href="s_js_firma.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Contraseña</h3>
-          <p>Script ..</p>
-          <a class="btn" href="s_js_pass.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Contraseña Automática</h3>
-          <p>Script ..</p>
-          <a class="btn" href="s_js_password_a.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Temporizador</h3>
-          <p>Script ..</p>
-          <a class="btn" href="s_js_temporizador.html">Ver</a>
-        </div>
+<!-- Header -->
+<header class="header">
+  <div class="overlay"></div>
+  <div class="overlay-content">
+    <h1 data-i18n="portfolio_title">Portfolio</h1>
+    <p class="subtitulo" data-i18n="portfolio_subtitle">
+      Esta sección reúne una selección de proyectos desarrollados durante mi formación y experiencia práctica. Incluye scripts funcionales en JavaScript y Python, juegos interactivos, automatizaciones simples y notebooks de análisis de datos. Cada uno refleja distintas habilidades técnicas aplicadas a la resolución de problemas concretos, exploración de datos y desarrollo web.
+    </p>
+  </div>
+</header>
+
+<!-- Secciones de proyectos -->
+<section class="container_section">
+
+  <!-- Scripts JS -->
+  <div class="accordion"><h2 data-i18n="scripts_js">Scripts JS <i class="fas fa-chevron-right"></i></h2></div>
+  <div class="panel">
+    <div class="grid">
+      <div class="card">
+        <h3>Validar Mail</h3>
+        <p>Lorem Ipsum</p>
+        <a class="btn" href="s_js_check_mail.html" data-i18n="ver">Ver</a>
+      </div>
+      <div class="card">
+        <h3>Clima</h3>
+        <p data-i18n="clima_desc">Script que muestra el clima (necesita permisos de ubicación).</p>
+        <a class="btn" href="s_js_clima.html" data-i18n="ver">Ver</a>
       </div>
     </div>
+  </div>
 
-    <!-- Sección 2 -->
-    <div class="accordion"><h2>Juegos JS <i class="fas fa-chevron-right"></i></h2></div>
-    <div class="panel">
-      <div class="grid">
-        <div class="card">
-          <h3>Ahorcado</h3>
-          <p>Juego clásico del ahorcado implementado en JavaScript.</p>
-          <a class="btn" href="j_js_ahorcado.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Memoria</h3>
-          <p>Juego de la memoria desarrollado en JavaScript</p>
-          <a class="btn" href="j_js_memoria.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Snake</h3>
-          <p>Clásico juego desarrollado en JavaScript.</p>
-          <a class="btn" href="j_js_snake.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Tetris</h3>
-          <p>A disfrutar de esta versión que incluye personalización.</p>
-          <a class="btn" href="j_js_tetris.html">Ver</a>
-        </div>
+  <!-- Juegos JS -->
+  <div class="accordion"><h2 data-i18n="juegos_js">Juegos JS <i class="fas fa-chevron-right"></i></h2></div>
+  <div class="panel">
+    <div class="grid">
+      <div class="card">
+        <h3>Ahorcado</h3>
+        <p data-i18n="ahorcado_desc">Juego clásico del ahorcado implementado en JavaScript.</p>
+        <a class="btn" href="j_js_ahorcado.html" data-i18n="ver">Ver</a>
       </div>
     </div>
+  </div>
 
-    <!-- Sección 3 -->
-    <div class="accordion"><h2>Scripts Python <i class="fas fa-chevron-right"></i></h2></div>
-    <div class="panel">
-      <div class="grid">
-        <div class="card">
-          <h3>Script Ejemplo</h3>
-          <p>Este es un ejemplo para probar el uso de PyScript</p>
-          <a class="btn" href="s_py_probando_PyScript.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Descargar video de Yotube</h3>
-          <p>Lorem Imput</p>
-          <a class="btn" href="s_py_download_ytvideo.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Batalla Naval</h3>
-          <p>Lorem Imput</p>
-          <a class="btn" href="j_py_batalla_naval.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Ta Te Ti</h3>
-          <p>Lorem Imput</p>
-          <a class="btn" href="j_py_ta_te_ti.html">Ver</a>
-        </div>
-        <div class="card">
-          <h3>Piedra, Papel o Tijera</h3>
-          <p>Lorem Imput</p>
-          <a class="btn" href="j_py_piedra_papel_tijera.html">Ver</a>
-        </div>
+  <!-- Scripts Python -->
+  <div class="accordion"><h2 data-i18n="scripts_py">Scripts Python <i class="fas fa-chevron-right"></i></h2></div>
+  <div class="panel">
+    <div class="grid">
+      <div class="card">
+        <h3>Script Ejemplo</h3>
+        <p data-i18n="py_desc">Este es un ejemplo para probar el uso de PyScript.</p>
+        <a class="btn" href="s_py_probando_PyScript.html" data-i18n="ver">Ver</a>
       </div>
     </div>
+  </div>
 
-    <!-- Sección 4 -->
-    <div class="accordion"><h2>Ciencia de Datos <i class="fas fa-chevron-right"></i></h2></div>
-    <div class="panel">
-      <div class="grid">
-        <div class="card">
-          <h3>Análisis de CSV</h3>
-          <p>Exploración de datos de un archivo CSV con pandas.</p>
-          <a class="btn" href="#">Ver código</a>
-        </div>
-        <div class="card">
-          <h3>Visualización de Datos</h3>
-          <p>Gráficos con matplotlib y seaborn sobre dataset real.</p>
-          <a class="btn" href="#">Ver código</a>
-        </div>
+  <!-- Ciencia de Datos -->
+  <div class="accordion"><h2 data-i18n="ciencia_datos">Ciencia de Datos <i class="fas fa-chevron-right"></i></h2></div>
+  <div class="panel">
+    <div class="grid">
+      <div class="card">
+        <h3>Análisis de CSV</h3>
+        <p data-i18n="csv_desc">Exploración de datos de un archivo CSV con pandas.</p>
+        <a class="btn" href="#" data-i18n="ver">Ver código</a>
+      </div>
+      <div class="card">
+        <h3>Visualización de Datos</h3>
+        <p data-i18n="viz_desc">Gráficos con matplotlib y seaborn sobre dataset real.</p>
+        <a class="btn" href="#" data-i18n="ver">Ver código</a>
       </div>
     </div>
+  </div>
 
-  </section>
+</section>
 
-  <footer>© <span id="year"></span> • María Laura Peralta</footer>
+<!-- Contacto -->
+<section id="contacto">
+  <div class="container" style="max-width:700px">
+    <div class="card" style="text-align:center">
+      <h2 data-i18n="h_contact">Contacto</h2>
+      <p data-i18n="contact_pitch">¿Trabajamos juntos? Escribime:</p>
+      <form id="contact-form">
+        <input type="text" name="name" placeholder="" required data-i18n-placeholder="form_name_ph">
+        <input type="email" name="email" placeholder="" required data-i18n-placeholder="form_email_ph">
+        <textarea name="message" rows="4" placeholder="" required data-i18n-placeholder="form_message_ph"></textarea>
+        <button type="submit" class="btn primary" data-i18n="btn_send">
+          <i class="fas fa-paper-plane"></i> Enviar
+        </button>
+      </form>
+    </div>
+    <footer>© <span id="year"></span> • María Laura Peralta</footer>
+  </div>
+</section>
 
-  <script>
-    // Año en el footer
-    document.getElementById("year").textContent = new Date().getFullYear();
+<script>
+// Año dinámico
+document.getElementById("year").textContent = new Date().getFullYear();
 
-    // Acordeón funcional
-    const accordions = document.querySelectorAll(".accordion");
-    accordions.forEach(acc => {
-      acc.addEventListener("click", function () {
-        this.classList.toggle("active");
-        const panel = this.nextElementSibling;
-        panel.style.display = panel.style.display === "block" ? "none" : "block";
-      });
+// Acordeón funcional
+document.querySelectorAll(".accordion").forEach(acc => {
+  acc.addEventListener("click", function () {
+    this.classList.toggle("active");
+    const panel = this.nextElementSibling;
+    panel.style.display = panel.style.display === "block" ? "none" : "block";
+  });
+});
+
+// Modo oscuro
+const toggle = document.getElementById("darkToggle");
+const body = document.body;
+if (localStorage.getItem("theme") === "dark") {
+  body.classList.add("dark");
+  toggle.innerHTML = '<i class="fas fa-sun"></i>';
+} else {
+  toggle.innerHTML = '<i class="fas fa-moon"></i>';
+}
+toggle.addEventListener("click", () => {
+  body.classList.toggle("dark");
+  if (body.classList.contains("dark")) {
+    localStorage.setItem("theme", "dark");
+    toggle.innerHTML = '<i class="fas fa-sun"></i>';
+  } else {
+    localStorage.setItem("theme", "light");
+    toggle.innerHTML = '<i class="fas fa-moon"></i>';
+  }
+});
+
+// Traducción
+document.addEventListener('DOMContentLoaded', () => {
+  const DICT = {
+    es: {
+      portfolio_title: 'Portfolio',
+      portfolio_subtitle: 'Esta sección reúne una selección de proyectos desarrollados durante mi formación y experiencia práctica. Incluye scripts funcionales en JavaScript y Python, juegos interactivos, automatizaciones simples y notebooks de análisis de datos. Cada uno refleja distintas habilidades técnicas aplicadas a la resolución de problemas concretos, exploración de datos y desarrollo web.',
+      scripts_js: 'Scripts JS',
+      juegos_js: 'Juegos JS',
+      scripts_py: 'Scripts Python',
+      ciencia_datos: 'Ciencia de Datos',
+      clima_desc: 'Script que muestra el clima (necesita permisos de ubicación).',
+      ahorcado_desc: 'Juego clásico del ahorcado implementado en JavaScript.',
+      py_desc: 'Este es un ejemplo para probar el uso de PyScript.',
+      csv_desc: 'Exploración de datos de un archivo CSV con pandas.',
+      viz_desc: 'Gráficos con matplotlib y seaborn sobre dataset real.',
+      ver: 'Ver',
+      h_contact: 'Contacto',
+      contact_pitch: '¿Trabajamos juntos? Escribime:',
+      btn_send: 'Enviar',
+      form_name_ph: 'Tu nombre',
+      form_email_ph: 'Tu email',
+      form_message_ph: 'Tu mensaje'
+    },
+    en: {
+      portfolio_title: 'Portfolio',
+      portfolio_subtitle: 'This section brings together a selection of projects developed during my training and practical experience. It includes functional scripts in JavaScript and Python, interactive games, simple automations, and data analysis notebooks. Each reflects distinct technical skills applied to specific problem-solving, data exploration, and web development.',
+      scripts_js: 'JS Scripts',
+      juegos_js: 'JS Games',
+      scripts_py: 'Python Scripts',
+      ciencia_datos: 'Data Science',
+      clima_desc: 'Script that shows the weather (requires location permission).',
+      ahorcado_desc: 'Classic hangman game implemented in JavaScript.',
+      py_desc: 'This is an example to test PyScript usage.',
+      csv_desc: 'Exploration of a CSV file using pandas.',
+      viz_desc: 'Graphs with matplotlib and seaborn over a real dataset.',
+      ver: 'See',
+      h_contact: 'Contact',
+      contact_pitch: "Shall we work together? Message me and I'll gladly share portfolio and projects.",
+      btn_send: 'Send',
+      form_name_ph: 'Your name',
+      form_email_ph: 'Your email',
+      form_message_ph: 'Your message'
+    }
+  };
+
+  function applyLang(lang) {
+    document.querySelectorAll('[data-i18n]').forEach(el => {
+      const key = el.getAttribute('data-i18n');
+      if (DICT[lang] && DICT[lang][key]) el.textContent = DICT[lang][key];
     });
-  </script>
+    document.querySelectorAll('[data-i18n-placeholder]').forEach(el => {
+      const key = el.getAttribute('data-i18n-placeholder');
+      if (DICT[lang] && DICT[lang][key]) el.setAttribute('placeholder', DICT[lang][key]);
+    });
+    document.getElementById('lang-es').classList.toggle('active', lang === 'es');
+    document.getElementById('lang-en').classList.toggle('active', lang === 'en');
+    localStorage.setItem('lang', lang);
+  }
+
+  document.getElementById('lang-es').addEventListener('click', () => applyLang('es'));
+  document.getElementById('lang-en').addEventListener('click', () => applyLang('en'));
+
+  applyLang(localStorage.getItem('lang') || 'es');
+});
+
+// Formulario contacto
+document.addEventListener('DOMContentLoaded', () => {
+  const cf = document.getElementById('contact-form');
+  if (cf) {
+    cf.addEventListener('submit', function (e) {
+      e.preventDefault();
+      const name = this.name.value.trim();
+      const email = this.email.value.trim();
+      const message = this.message.value.trim();
+      const subject = encodeURIComponent('Contacto desde Portfolio Web');
+      const body = encodeURIComponent(`Nombre: ${name}\nEmail: ${email}\n\n${message}`);
+      window.location.href = `mailto:lali.635@gmail.com?subject=${subject}&body=${body}`;
+    });
+  }
+});
+</script>
+
 </body>
 </html>
